--- a/attractions.html
+++ b/attractions.html
@@ -22,55 +22,145 @@
 
 <!-- Individual Attractions -->
 <section>
-    <h2>Attraction 1</h2>
-    <p>Description of Attraction 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <img src="attraction1.jpg" alt="Attraction 1 Image">
-    <a href="external-link-1" target="_blank">More Info</a>
+    <h2>Mars City Dome</h2>
+    <img src="/images/mars_city.bmp" alt=""" width="500px" height="auto" />
+
+
 </section>
 
 <section>
-    <h2>Attraction 2</h2>
-    <p>Description of Attraction 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <img src="attraction2.jpg" alt="Attraction 2 Image">
-    <a href="external-link-2" target="_blank">More Info</a>
+    <h3>Nuwa City, a city within Mars City</h3>
+    <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/YOD-AnqCexc?si=mqxq6WtpOgISOFWH"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
 </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mars City Attractions</title>
+  <style>
+    #attractions-table {
+      border-collapse: collapse;
+      width: 100%;
+      border: 1px solid #ddd;
+    }
+css
+Copy code
+#attractions-table th, #attractions-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
 
-<!-- List of Attractions -->
-<section>
-    <h2>List of Attractions</h2>
-    <ul>
-        <li>Historical Sites</li>
-        <li>Parks</li>
-        <li>Museums</li>
-        <!-- Add more categories as needed -->
-    </ul>
-</section>
-
-<!-- Attractions Table -->
-<section>
-    <h2>Attractions Summary</h2>
-    <table class="attractions-table">
-        <thead>
-            <tr>
-                <th>Name</th>
+#attractions-table th {
+  background-color: #f2f2f2;
+}
+  </style>
+</head>
+<body>
+  <!-- Your page content goes here -->
+  <h1>Welcome to Mars City Attractions</h1>
+  <!-- Other content of the Attractions webpage -->
+  <table id="attractions-table" class="attractions-table">
+    <thead>
+      <tr>
+        <th>Attraction Name</th>
+        <th>Type</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Olympus Mons Park</td><!DOCTYPE html>
+        <html lang="en">
+        <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>Mars City Attractions</title>
+          <style>
+            #attractions-table {
+              border-collapse: collapse;
+              width: 100%;
+              border: 1px solid #ddd;
+            }
+        css
+        Copy code
+        #attractions-table th, #attractions-table td {
+          border: 1px solid #ddd;
+          padding: 8px;
+          text-align: left;
+        }
+        
+        #attractions-table th {
+          background-color: #f2f2f2;
+        }
+          </style>
+        </head>
+        <body>
+          <h1>Welcome to Mars City Attractions</h1>
+          <!-- Attractions Section 1 -->
+          <section>
+            <h2>Olympus Mons Park</h2>
+            <p>Experience the breathtaking views and serene landscapes of the largest volcano in the solar system.</p>
+            <img src="olympus-mons.jpg" alt="Olympus Mons Park">
+            <p><a href="more_info_olympus_mons.html" target="_blank">More Information</a></p>
+          </section>
+          <!-- Attractions Section 2 (Add more sections as needed) -->
+          <section>
+            <h3>Valles Marineris Museum</h2>
+            <p>Explore the wonders of Mars through interactive exhibits and artifacts from space missions.</p>
+            <img src="valles-marineris.jpg" alt="Valles Marineris Museum">
+            <p><a href="more_info_valles_marineris.html" target="_blank">More Information</a></p>
+          </section>
+          <!-- List of Attractions -->
+          <h4>List of Attractions</h2>
+          <ul>
+            <li>Historical Sites</li>
+            <li>Parks</li>
+            <li>Museums</li>
+            <!-- Add more categories as needed -->
+          </ul>
+          <!-- Attractions Table -->
+          <h5>Attractions Table</h2>
+          <table id="attractions-table" class="attractions-table">
+            <thead>
+              <tr>
+                <th>Attraction Name</th>
                 <th>Type</th>
                 <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Attraction 1</td>
-                <td>Museum</td>
-                <td>Description of Attraction 1.</td>
-            </tr>
-            <tr>
-                <td>Attraction 2</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Olympus Mons Park</td>
                 <td>Park</td>
-                <td>Description of Attraction 2.</td>
-            </tr>
-            <!-- Add more rows for each attraction -->
-        </tbody>
-    </table>
+                <td>Experience the breathtaking views and serene landscapes of the largest volcano in the solar system.</td>
+              </tr>
+              <tr>
+                <td>Valles Marineris Museum</td>
+                <td>Museum</td>
+                <td>Explore the wonders of Mars through interactive exhibits and artifacts from space missions.</td>
+              </tr>
+              <!-- Add more rows as needed -->
+            </tbody>
+          </table>
+        </body>
+        </html>
+        <td>Park</td>
+        <td>Experience the breathtaking views and serene landscapes of the largest volcano in the solar system.</td>
+      </tr>
+      <!-- Add more rows as needed -->
+    </tbody>
+  </table>
+</body>
+</html>
 </section>
 
 </body>
