--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="/index.html">Home</a></li>
           <li><a href="/attractions.html">Attractions</a></li>
-          <li><a href="/about.html">Mars Maps</a></li>
+          <li><a href="/about.html">About</a></li>
           <li><a href="/contact.html">Contact Us</a></li>
         </ul>
       </nav>
